# lira_pqr_mesh

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  cxxopts.h  lira_pqr_mesh  lira_pqr_mesh.cpp  mesh.off
.cmake/api/v1/reply/: cache-v2-c757871b74a0978f6a7e.json  cmakeFiles-v1-fe2c8d88b9077f5a009f.json  codemodel-v2-3af1be4dfe3ef8a0a519.json  index-2022-09-26T15-11-37-0105.json  target-lira_pqr_mesh-Release-e5272757f927f7aebe27.json
